<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.language.LanguageActivity"
    android:background="@color/background_color">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_margin="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_clear"
        android:tint="@color/white"
        android:layout_gravity="center_vertical"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/back_button"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintStart_toEndOf="@id/back_button"
        android:text="@string/language_activity_appbar"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <androidx.fragment.app.FragmentContainerView
        app:layout_constraintTop_toBottomOf="@id/back_button"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin = "14sp"
        android:id="@+id/map"
        tools:context=".MapsActivity"/>
        <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/map"
        app:layout_constraintStart_toStartOf="parent"
        android:text= "@string/set_country"
        android:layout_marginTop="24dp"
        android:layout_marginStart="14dp"
        android:textColor="@color/white"
        android:textSize="36sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/country_title"
        app:layout_constraintBottom_toBottomOf="@id/country_title"
        app:layout_constraintStart_toEndOf="@id/country_title"
        android:textSize="36sp"
        android:textColor="@color/white"
        tools:text = "한국"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/latitude_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/country_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="14dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text = "@string/set_latitude"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/latitude_title"
        app:layout_constraintBottom_toBottomOf="@id/latitude_title"
        app:layout_constraintStart_toEndOf="@id/latitude_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:text = "36.36"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/longitude_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/latitude_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="14dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text = "@string/set_longitude"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/longitude_title"
        app:layout_constraintBottom_toBottomOf="@id/longitude_title"
        app:layout_constraintStart_toEndOf="@id/longitude_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:text = "127.65"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:gravity="center"
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirm_button"
        android:textColor="@color/red"
        android:text="@string/cancel"
        android:textSize="24sp"
        android:layout_margin="14dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:gravity="center"
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        android:textColor="@color/point_color"
        android:text="@string/confirm"
        android:textSize="24sp"
        android:layout_margin="14dp" />

</androidx.constraintlayout.widget.ConstraintLayout>