<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="14dp"
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_clear"
        android:tint="@color/white"
        android:layout_gravity="center_vertical"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_login"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding = "70dp"
        android:src="@drawable/login_img"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login"
        android:text="@string/login_activity_title"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/login_activity_description"
        android:textColor="@color/subtext_color"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_kakao_login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sub"
        android:layout_marginTop="24dp"
        android:src="@drawable/kakao_login"/>

    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:background="@color/border_color"
        app:layout_constraintTop_toBottomOf="@id/btn_kakao_login"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/service_terms"
        android:textSize="12sp"
        android:textColor="@color/subtext_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>